forkOS thread per GPU
good speedup with +RTS -N2

--- a/src/multiGPU/Makefile
+++ b/src/multiGPU/Makefile
@@ -11,6 +11,7 @@ HSMAIN          := multiGPU.hs
 CUFILES         := simpleMultiGPU_kernel.cu
 
 EXTRALIBS       := stdc++
+GHCFLAGS	+= -threaded
 
 # ------------------------------------------------------------------------------
 # Haskell/CUDA build system
